treasures track demo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,8 @@
       "sizes": "32x32"
     }
   ],
-  "start_url": ".",
+  "start_url": "./",
+  "scope": ".",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
