--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dsa",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/dsa/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -21,7 +22,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-throw-literal": 0
+    }
   },
   "browserslist": {
     "production": [
